--- a/firebase.json
+++ b/firebase.json
@@ -11,6 +11,10 @@
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
+    ],
+    "rewrites": [
+      { "source": "/dashboard", "destination": "/dashboard.html" },
+      { "source": "**", "destination": "/index.html" }
     ]
   }
 }
