--- a/firebase.json
+++ b/firebase.json
@@ -13,8 +13,21 @@
       "**/node_modules/**"
     ],
     "rewrites": [
-      { "source": "/dashboard", "destination": "/dashboard.html" },
-      { "source": "**", "destination": "/index.html" }
+      { "source": "/dashboard", "destination": "/dashboard.html"},
+      {"source": "**", "destination": "/index.html"}
     ]
-  }
+  },
+  "functions": [
+    {
+      "source": "functions",
+      "codebase": "default",
+      "ignore": [
+        "node_modules",
+        ".git",
+        "firebase-debug.log",
+        "firebase-debug.*.log",
+        "*.local"
+      ]
+    }
+  ]
 }
