--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
+    "cors": "^2.8.5",
     "firebase": "^12.0.0",
     "framer-motion": "^12.23.12",
     "highlight.js": "^11.11.1",
