--- a/firebase.json
+++ b/firebase.json
@@ -1,8 +1,7 @@
 {
   "firestore": {
     "database": "(default)",
-    "rules": "firestore.rules",
-    "indexes": "firestore.indexes.json"
+    "rules": "firestore.rules"
   },
   "hosting": {
     "public": "out",
